# mini-mail-auth

./: Cargo.toml  README.md  private_key.pem
examples/: comparison.rs
mini-mail-auth/: Cargo.toml  README.md  private_key.pem
mini-mail-auth/examples/: comparison.rs
mini-mail-auth/src/: lib.rs
mini-mail-auth/src/common/: headers.rs
mini-mail-auth/src/dkim/: builder.rs  canonicalize.rs  mod.rs  sign.rs
src/: lib.rs
src/common/: crypto.rs  headers.rs  mod.rs
src/dkim/: canonicalize.rs  headers.rs  mod.rs  sign.rs
