[package]
name = "mini-mail-auth"
description = "A minimal DKIM signing library for Rust, for those who just need to sign an email."
version = "0.1.0"
edition = "2021"
authors = [ "Stalwart Labs LLC <hello@stalw.art>" ]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-auth"
homepage = "https://github.com/stalwartlabs/mail-auth"
keywords = ["dkim", "mail", "email", "sign"]
categories = ["email", "authentication"]

[dependencies]
rsa = { version = "0.9.6", default-features = false, features = ["pem", "sha2"] }
sha2 = { version = "0.10.9", default-features = false }
base64 = "0.22.1"

[dev-dependencies]
mail-auth = { git = "https://github.com/olehmisar/mail-auth.git", rev = "fb1d434", features = ["rust-crypto"], default-features = false  }
regex = "1.10.4"
